Abide by Google Style of Code